--- a/.github/workflows/buildkite_unit_tests.yml
+++ b/.github/workflows/buildkite_unit_tests.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - name: Download Buildkite Artifacts
       if: github.repository_owner == 'horovod'
-      uses: EnricoMi/download-buildkite-artifact-action@master
+      uses: EnricoMi/download-buildkite-artifact-action@branch-get-names-of-retried-jobs
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         buildkite_token: ${{ secrets.BUILDKITE_TOKEN }}
